--- a/website/newsletter/199/index.mdx
+++ b/website/newsletter/199/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /199
-title: "This Week In React #199: shadcn CLI,, Next.js 15, @svg-use,  Storybook component testing, React 19, Rspack in Re.pack, React Three Fiber, Super Apps, EAS Pricing. ECMAScript Stage 2.7, AggregateError, i-html, Style-observer…"
+title: "This Week In React #199: shadcn, Next.js, TanStack, Remix, MDX, Astro, Storybook, @svg-use, MSW, RAG, RN-WebGPU, React-Three-Fiber, Re.Pack, Super Apps, RN-macOS, EAS, Node.jx, Stage 2.7, AggregateError, Style-Observer..."
 authors: [matthieugicquel, cyrilbo]
 date: 09-04-2024
 unlisted: true
@@ -8,9 +8,9 @@ unlisted: true
 
 Hi everyone!
 
-Cyril and Matthieu from Theodo Apps (formerly BAM) here 👋, standing in for Seb to bring you the latest news from the React and React Native world.
+Cyril and Matthieu from [Theodo Apps (formerly BAM)](https://apps.theodo.com/en?utm_source=thisweekinreact) here 👋, standing in for Seb to bring you the latest news from the React and React Native worlds.
 
-This week, shadcn has a released a new CLI, and we've noticed other nice things that are currently cooking, like support for the `use()` hook in React Query.
+This week, shadcn has released a new CLI, and we've noticed other nice things that are currently cooking, like support for the `use()` hook in React Query.
 
 The React Universe Conf starts tomorrow, we're expecting React Native announcements that we will discuss next week!
 
@@ -55,15 +55,14 @@ More details in 🐦 [this twitter thread](https://x.com/shadcn/status/182964652
 - 🐦 [Render on Fetch vs Fetch on Render](https://x.com/t3dotgg/status/1829988532489793957): Theo shares a graphical visualization of different React rendering patterns. An associated video is available to deep dive.
 - 📜 [Introducing @svg-use](https://fotis.xyz/posts/introducing-svg-use/): Greatly explains how SVG-in-JS (notably SVGR in React) is convenient for theming and distribution, but is not ideal in terms of performance and duplication. The `<use href>` pattern is a good alternative but requires manual plumbing, so the author created a toolchain to automate it.
 - 📜 [Build-time Components](https://codehike.org/blog/build-time-components): Greatly illustrated article explains the benefits of React Server Components for MDX users looking to make their content interactive. Client components and build-time Remark/Rehype plugins have limitations, and RSCs offer the best of both.
-- 📜 [Blending Markdown and React components in NextJS](https://edspencer.net/2024/8/28/using-markdown-with-nextjs)
-- 📜 [Higher Order Components (HOCs) in React: What They Are and How To Use Them](https://www.reactsquad.io/blog/higher-order-components-hocs-in-react)
-- 📜 [Comprehensive React Testing: Handling API Calls with Mock Service Worker](https://www.trevorlasn.com/blog/react-testing-mock-service-worker/)
-- 📜 [Using Server Functions and Tanstack Query](https://www.brenelz.com/posts/using-server-functions-and-tanstack-query/): Tanstack Start is almost ready to use, and has a compelling data fetching approach, with “server fns” integrated with react-query and routing (for prefetching), fully typesafe of course.
+- 📜 [Using Server Functions and TanStack Query](https://www.brenelz.com/posts/using-server-functions-and-tanstack-query/): TanStack Start is almost ready to use, and has a compelling data fetching approach, with “server fns” integrated with react-query and routing (for prefetching), fully typesafe of course.
 - 📜 [What the heck is atomic state management?](https://www.frontendundefined.com/posts/monthly/jotai-atomic-state-management/): A refresher on how to use Jotai “the right way” and the benefits it brings.
 - 📜 [Component testing in Storybook](https://storybook.js.org/blog/component-testing/): Storybook promotes component testing as a complement to end-to-end testing, offering speed and reliability with browser fidelity for better UI test coverage.
 - 📜 [The Complete Developer Guide to React 19:](https://www.callstack.com/blog/the-complete-developer-guide-to-react-19-part-1-async-handling) A 2-part series on what’s coming in React 19, including useTransition, useActionState, useOptimistic, use, Server Components, Server Actions, ref as a prop, Diffs for Hydration Errors, Improved error reporting, Context as a provider, useDeferredValue initial value & more.
 - 📜 [Easy RAG for TypeScript and React Apps](https://edspencer.net/2024/9/2/easy-rag-for-typescript-and-react-apps): Build a RAG system in TypeScript and React by processing text documents, generating embeddings, and utilizing a vector database for semantic search to answer user queries.
-- 📜 [React Drag and Drop: The Missing Example](https://www.davegray.codes/posts/missing-example-for-react-drag-n-drop)
+- 📜 [Blending Markdown and React components in NextJS](https://edspencer.net/2024/8/28/using-markdown-with-nextjs)
+- 📜 [Higher Order Components (HOCs) in React: What They Are and How To Use Them](https://www.reactsquad.io/blog/higher-order-components-hocs-in-react)
+- 📜 [Comprehensive React Testing: Handling API Calls with Mock Service Worker](https://www.trevorlasn.com/blog/react-testing-mock-service-worker/)
 - 📜 [Using the inert attribute in React](https://www.mayank.co/notes/inert-in-react)
 - 📜 [Authoring CSS in modern JavaScript apps](https://www.alexchantastic.com/modern-css-authoring)
 - 📦 [Midday V1 - Starter kit based on Next.js, Turborepo, Shadcn & more](https://github.com/midday-ai/v1)
@@ -84,7 +83,6 @@ More details in 🐦 [this twitter thread](https://x.com/shadcn/status/182964652
 
 [![React Universe](/emails/issues/199/react-universe.jpg)](https://www.reactuniverseconf.com/)
 
-
 At the time we’re writing this, the React Native Core Contributor Summit is happening in Wrocław.
 
 It will be followed by the React Universe conf on Thursday and Friday. A lot of exciting talks are planned, and [you can follow along on Youtube](https://www.youtube.com/watch?v=b48Lax2-jOQ). Some highlights: A new debugger, The New Architecture, Expo DOM Components, Static Hermes.
@@ -99,10 +97,10 @@ So we will probably have more React Native news for you next week!
 - 📜 [Create and run fast end-to-end tests using Moropo and Expo: with Maestro](https://expo.dev/blog/create-and-run-fast-end-to-end-tests-using-moropo-and-expo)
 - 📜 [How to Develop a Super App with React Native?](https://medium.com/@xayilmaz/how-to-develop-a-super-app-with-react-native-fe18fbe002c5): Use of a custom native module for communication between mini-apps differs from the Repack approach, which leverages Webpack to generate modular and independent JavaScript bundles for each mini-app.
 - 📖 [Expo documentation update](https://x.com/amanhimself/status/1828545129499750498): Local First Architecture, DOM Components, Native project upgrade helper for SDK 51.
-- 📖 [Expo Application Services (EAS) Pricing](https://expo.dev/pricing\#update): EAS Update and Build concurrencies get cheaper as of September 1st.
+- 📖 [Expo Application Services (EAS) Pricing](https://expo.dev/pricing#update): EAS Update and Build concurrencies get cheaper as of September 1st.
 - 📦 [react-native-macos 0.75](https://www.npmjs.com/package/react-native-macos/v/0.75.2)
 - 🎥 [Minute React Native - React Native WebGPU Explained in under 2 Minutes](https://www.youtube.com/watch?v=DQrO2LFnrOw)
-- 🎥 [Chain React 2024 - YouTube playlist available](https://www.youtube.com/playlist?list=PLE7tQUdRKcyb81ybEVsrk6PfxXu7pJs1i\#chainreact2024)
+- 🎥 [Chain React 2024 - YouTube playlist available](https://www.youtube.com/playlist?list=PLE7tQUdRKcyb81ybEVsrk6PfxXu7pJs1i#chainreact2024)
 
 ---
 
@@ -111,7 +109,6 @@ So we will probably have more React Native news for you next week!
 - 📜 [Inside ECMAScript: JavaScript Standard Gets an Extra Stage](https://thenewstack.io/inside-ecmascript-javascript-standard-gets-an-extra-stage/)
 - 📜 [The web's clipboard, and how it stores data of different types](https://alexharri.com/blog/clipboard)
 - 📜 [JavaScript Generators Explained, But On A Senior-Level](https://www.reactsquad.io/blog/understanding-generators-in-javascript)
-- 📜 [Inside ECMAScript: JavaScript Standard Gets an Extra Stage](https://thenewstack.io/inside-ecmascript-javascript-standard-gets-an-extra-stage/)
 - 📜 [AggregateError in JavaScript](https://www.trevorlasn.com/blog/aggregate-error-in-javascript/)
 - 📦 [ThreeJS 168](https://github.com/mrdoob/three.js/releases/tag/r168)
 - 📦 [Style-observer \- A MutationObserver for CSS](https://www.bram.us/2024/08/31/introducing-bramus-style-observer-a-mutationobserver-for-css/)
