--- a/website/newsletter/199/index.mdx
+++ b/website/newsletter/199/index.mdx
@@ -68,6 +68,8 @@ More details in 🐦 [this twitter thread](https://x.com/shadcn/status/182964652
 - 📦 [Midday V1 - Starter kit based on Next.js, Turborepo, Shadcn & more](https://github.com/midday-ai/v1)
 - 📦 [Bulletproof-React - scalable React architecture repo - now updated with Next.js examples](https://github.com/alan2207/bulletproof-react)
 - 📦 [Astro 4.15 - Astro Actions, Use rewrites for i18n fallbacks, libSQL remotes in @astrojs/db, Timeout option in client:idle, Swap helpers for ViewTransitions](https://astro.build/blog/astro-4150/)
+- 🎥 [Lee Robinson - Build anything with v0 (3D games, interactive apps)](https://www.youtube.com/watch?v=zA-eCGFBXjM)
+- 🎥 [Jack Herrington - Using AI Structured Output with NextJS & React](https://www.youtube.com/watch?v=_Rb4SpWRHC8)
 
 <SubscribeFormEmbed placement="middle" />
 
@@ -100,6 +102,8 @@ So we will probably have more React Native news for you next week!
 - 📖 [Expo Application Services (EAS) Pricing](https://expo.dev/pricing#update): EAS Update and Build concurrencies get cheaper as of September 1st.
 - 📦 [react-native-macos 0.75](https://www.npmjs.com/package/react-native-macos/v/0.75.2)
 - 🎥 [Minute React Native - React Native WebGPU Explained in under 2 Minutes](https://www.youtube.com/watch?v=DQrO2LFnrOw)
+- 🎥 [Dan’s Lab - How to build a QR Code Scanner with Expo](https://www.youtube.com/watch?v=PZIEqcdFjpQ)
+- 🎥 [Simon Grimm - Expo DOM Components are Wild](https://www.youtube.com/watch?v=BWA8KY5QEPk)
 - 🎥 [Chain React 2024 - YouTube playlist available](https://www.youtube.com/playlist?list=PLE7tQUdRKcyb81ybEVsrk6PfxXu7pJs1i#chainreact2024)
 
 ---
