--- a/website/newsletter/199/index.mdx
+++ b/website/newsletter/199/index.mdx
@@ -49,6 +49,7 @@ More details in 🐦 [this twitter thread](https://x.com/shadcn/status/182964652
 
 ---
 
+- 💸 [React Component Analytics — Omlet Scans Your Codebase to Measure Component Usage to Increase Code Quality and Design Systems Adoption](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-quick-link-aug-2024)
 - 👀 [TanStack Query PR - Add support for `React.use()`](https://github.com/TanStack/query/pull/7988): React Query plans to return a promise that you can `use()`, making it easier to integrate with Suspense in a performant way. It’s more convenient than `usePrefetchQuery` and more parallel than `useSuspenseQuery`.
 - 👀 [Remix Route Convention Evolution](https://github.com/brookslybrand/route-convention-evolution): The new `routes.ts` we evoked last week will allow you to skip filesystem-based routing, or simplify using the convention of your choice.
 - 🐦 [Next.js 15 may be released soon](https://x.com/feedthejim/status/1829569083777437745) without waiting for React 19 to be stable, and without requiring React 19 for the pages router. It will include major Turbopack improvements.
@@ -93,6 +94,7 @@ So we will probably have more React Native news for you next week!
 
 ---
 
+- 💸 [React Native Mastery - The only course you need to Master React Native & Expo](https://notjust.dev/react-native-mastery?utm_source=twir&utm_medium=email)
 - 👀 [Re.Pack is adding support for Rspack](https://github.com/callstack/repack/pull/720): The alternative, webpack-compatible bundler for React Native will probably see major speed gains with this change.
 - 🐦 [React Native IDE will integrate Storybook into IDE's preview mode](https://x.com/kzzzf/status/1829262449541062716)
 - 🐦 [React Three Fiber running on react-native-webgpu](https://x.com/aarongrider/status/1830629528005460016): We’ve seen examples of Three.js running with react-native-webgpu. Aaron Grider from SpaceX is currently working on React Three Fiber support, bringing its declarative API to React Native land.
