--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/198/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/198/index.mdx
@@ -111,12 +111,12 @@ Whether you're launching a new framework or updating an existing library, Tutori
 - 💸 [Learn how to create a simple, type-safe PDF viewer with the Apryse SDK and React Native — complete with editing and annotation features.](https://apryse.com/blog/mobile/react-native-typescript-pdf-viewer?utm_source=thisweekinreact&utm_medium=newsletter&utm_campaign=0828)
 - 🐦 [Reanimated 4.0 will only work with Fabric (the new RN architecture)](https://x.com/kzzzf/status/1828461715228422153)
 - 🐦 [React Native WebGPU on visionOS demo](https://x.com/o_kwasniewski/status/1828079146456535224)
-- 👀 [React Native PR - migrate template to Swift](https://github.com/react-native-community/template/pull/45): Exciting to generate new React Native projects with AppDelegate in Swift instead of Objective-C.
-- 🗓️ [React Universe Conf](https://www.reactuniverseconf.com/?utm_source=thisweekinreact) - 🇵🇱 Wrocław - Sept 5-6. 10% discount with code "TWIR". Can’t make it in person? Register for Free Livestream Access! Speakers: Mike Grabowski, Fernando Rojo, Alex Hunt, Eric Vicenti...
-- 📜 [Shopify Tophat - Crafting a Delightful Mobile Developer Experience](https://shopify.engineering/shopify-tophat-mobile-developer-testing): Re-introduces “Tophat”, the macOS menubar app to increase React Native DX, that Shopify finally open-sourced last week. Apparently, this was an inspiration for Expo Orbit.
-- 📜 [Expo - What to do without CodePush](https://expo.dev/blog/what-to-do-without-codepush): Microsoft App Center will shut down soon, including CodePush. This article suggests CodePush alternatives for Over-The-Air updates. It encourages you to adopt EAS Updates by offering a nice side-by-side comparison, but also mentions self-hosted alternatives.
-- 📜 [Introducing Oblivious HTTP support in Swift](https://www.swift.org/blog/introducing-swift-nio-oblivious-http/): New Swift API could be useful for React Native devs looking to increase privacy protection.
-- 📜 [How to build a Bluetooth Low Energy powered Expo app](https://expo.dev/blog/how-to-build-a-bluetooth-low-energy-powered-expo-app): Tutorial using `react-native-ble-plx` with Expo Config plugin.
+- 👀 [React Native PR - migrate template to Swift](https://github.com/react-native-community/template/pull/45) : Passionnant de générer de nouveaux projets React Native avec AppDelegate en Swift plutôt qu'en Objective-C.
+- 🗓️ [React Universe Conf](https://www.reactuniverseconf.com/?utm_source=thisweekinreact) - 🇵🇱 Wrocław - Sept 5-6. 10% de réduction avec le code « TWIR ». Vous ne pouvez pas venir sur place ? Inscrivez-vous pour bénéficier d'un accès gratuit à la diffusion en direct ! Intervenants : Mike Grabowski, Fernando Rojo, Alex Hunt, Eric Vicenti...
+- 📜 [Shopify Tophat - Crafting a Delightful Mobile Developer Experience](https://shopify.engineering/shopify-tophat-mobile-developer-testing) : Réintroduit « Tophat », l'application macOS menubar pour augmenter React Native DX, que Shopify a finalement open-sourcé la semaine dernière. Apparemment, cette application a été une source d'inspiration pour Expo Orbit.
+- 📜 [Expo - What to do without CodePush](https://expo.dev/blog/what-to-do-without-codepush) : Le Microsoft App Center sera bientôt fermé, y compris CodePush. Cet article propose des alternatives à CodePush pour les mises à jour en direct. Il vous encourage à adopter EAS Update en offrant une belle comparaison entre les deux, mais mentionne également des alternatives auto-hébergées.
+- 📜 [Introducing Oblivious HTTP support in Swift](https://www.swift.org/blog/introducing-swift-nio-oblivious-http/) : Une nouvelle API Swift qui pourrait être utile aux développeurs React Native cherchant à renforcer la protection de la vie privée.
+- 📜 [How to build a Bluetooth Low Energy powered Expo app](https://expo.dev/blog/how-to-build-a-bluetooth-low-energy-powered-expo-app) : Tutoriel utilisant `react-native-ble-plx` avec le plugin Expo Config.
 - 📜 [How to deploy App Store and Beta versions of React Native iOS app from Azure DevOps pipeline](https://www.nico.fyi/blog/how-to-deploy-multiple-versions-react-native-ios-to-testflight-from-azure-devops-pipeline)
 - 📜 [How Rosebud decided to go native with Expo](https://expo.dev/blog/how-rosebud-decided-to-go-native-with-expo)
 - 📦 [React-Native-MMKV 3.0 - faster key/value storage, full rewrite to pure C++ TurboModule](https://github.com/mrousavy/react-native-mmkv/releases/tag/v3.0.0)
@@ -125,7 +125,7 @@ Whether you're launching a new framework or updating an existing library, Tutori
 - 📦 [Belt - Opionated CLI tool for starting a new React Native app](https://thoughtbot.com/blog/introducing-belt-your-new-favorite-tool-for-starting-react-native-apps)
 - 🎥 [Beto - Building an Obscura Pro Camera App with React Native Vision Camera and Expo](https://www.youtube.com/watch?v=xNaGYGDZ2JU)
 - 🎥 [Simon Grimm - When does local-first make sense?](https://www.youtube.com/watch?v=vLRtC53rwCg)
-- 🎥 [The React Native Podcast rebrands to React Universe On Air](https://www.youtube.com/watch?v=Y8VVdfP9QDE): The popular Callstack podcast has rebranded to a new name matching the upcoming React Universe conf next week and for covering a broader React cross-platform scope.
+- 🎥 [The React Native Podcast rebrands to React Universe On Air](https://www.youtube.com/watch?v=Y8VVdfP9QDE) : Le célèbre podcast Callstack a changé de nom pour s'adapter à la conférence React Universe qui aura lieu la semaine prochaine et pour couvrir un champ d'application plus large de React cross-platform.
 - 🎙️ [Rocket Ship 48 - MLKit & The React Native Paradox with Gant Laborde](https://share.transistor.fm/s/9b305e63)
 - 🎙️ [RNR 305 - On-device AI in React Native with Gant Laborde](https://www.reactnativeradio.com/episodes/rnr-305-on-device-ai-in-react-native-with-gant-laborde) (oui, encore lui !)
 
