--- a/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/199/index.mdx
+++ b/website/i18n/fr/docusaurus-plugin-content-blog-newsletter/199/index.mdx
@@ -9,9 +9,9 @@ Salut à tous !
 
 Cyril et Matthieu de [Theodo Apps (anciennement BAM)](https://apps.theodo.com/en?utm_source=thisweekinreact) sont présents 👋, ils remplacent Seb pour vous présenter les dernières nouvelles des mondes React et React Native.
 
-This week, shadcn has released a new CLI, and we've noticed other nice things that are currently cooking, like support for the `use()` hook in React Query.
+Cette semaine, shadcn a publié un nouveau CLI, et nous avons remarqué d'autres choses intéressantes qui sont en train de se préparer, comme le support du hook `use()` dans React Query.
 
-The React Universe Conf starts tomorrow, we're expecting React Native announcements that we will discuss next week!
+La React Universe Conf commence demain, nous attendons des annonces sur React Native dont nous parlerons la semaine prochaine !
 
 <!-- truncate -->
 
@@ -41,29 +41,29 @@ Join us on September 15th for a hands-on workshop with Dan Mindru, co-host of th
 
 **[Shadcn introduces a new CLI](https://ui.shadcn.com/docs/changelog)**
 
-It’s significantly more powerful and flexible:
+Il est beaucoup plus puissant et flexible :
 
-- `shadcn add` can now install components, themes, hooks, utils, dependencies…
-- It supports for multiple React frameworks (Next.js, Remix, Vite, Laravel)
-- It can update your tailwind config instead of overriding it
-- Components can be imported directly from urls
+- `shadcn add` peut maintenant installer des composants, des thèmes, des hooks, des utilitaires, des dépendances...
+- Il supporte plusieurs frameworks React (Next.js, Remix, Vite, Laravel)
+- Il peut mettre à jour votre configuration tailwind au lieu de l'écraser
+- Les composants peuvent être importés directement depuis les urls
 
-More details in 🐦 [this twitter thread](https://x.com/shadcn/status/1829646528149143992).
+Plus de détails dans 🐦 [ce thread twitter](https://x.com/shadcn/status/1829646528149143992).
 
 ---
 
 - 💸 [React Component Analytics — Omlet Scans Your Codebase to Measure Component Usage to Increase Code Quality and Design Systems Adoption](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-quick-link-aug-2024)
-- 👀 [TanStack Query PR - Add support for `React.use()`](https://github.com/TanStack/query/pull/7988): React Query plans to return a promise that you can `use()`, making it easier to integrate with Suspense in a performant way. It’s more convenient than `usePrefetchQuery` and more parallel than `useSuspenseQuery`.
-- 👀 [Remix Route Convention Evolution](https://github.com/brookslybrand/route-convention-evolution): The new `routes.ts` we evoked last week will allow you to skip filesystem-based routing, or simplify using the convention of your choice.
-- 🐦 [Next.js 15 may be released soon](https://x.com/feedthejim/status/1829569083777437745) without waiting for React 19 to be stable, and without requiring React 19 for the pages router. It will include major Turbopack improvements.
-- 🐦 [Render on Fetch vs Fetch on Render](https://x.com/t3dotgg/status/1829988532489793957): Theo shares a graphical visualization of different React rendering patterns. An associated video is available to deep dive.
-- 📜 [Introducing @svg-use](https://fotis.xyz/posts/introducing-svg-use/): Greatly explains how SVG-in-JS (notably SVGR in React) is convenient for theming and distribution, but is not ideal in terms of performance and duplication. The `<use href>` pattern is a good alternative but requires manual plumbing, so the author created a toolchain to automate it.
-- 📜 [Build-time Components](https://codehike.org/blog/build-time-components): Greatly illustrated article explains the benefits of React Server Components for MDX users looking to make their content interactive. Client components and build-time Remark/Rehype plugins have limitations, and RSCs offer the best of both.
-- 📜 [Using Server Functions and TanStack Query](https://www.brenelz.com/posts/using-server-functions-and-tanstack-query/): TanStack Start is almost ready to use, and has a compelling data fetching approach, with “server fns” integrated with react-query and routing (for prefetching), fully typesafe of course.
-- 📜 [What the heck is atomic state management?](https://www.frontendundefined.com/posts/monthly/jotai-atomic-state-management/): A refresher on how to use Jotai “the right way” and the benefits it brings.
-- 📜 [Component testing in Storybook](https://storybook.js.org/blog/component-testing/): Storybook promotes component testing as a complement to end-to-end testing, offering speed and reliability with browser fidelity for better UI test coverage.
-- 📜 [The Complete Developer Guide to React 19:](https://www.callstack.com/blog/the-complete-developer-guide-to-react-19-part-1-async-handling) A 2-part series on what’s coming in React 19, including useTransition, useActionState, useOptimistic, use, Server Components, Server Actions, ref as a prop, Diffs for Hydration Errors, Improved error reporting, Context as a provider, useDeferredValue initial value & more.
-- 📜 [Easy RAG for TypeScript and React Apps](https://edspencer.net/2024/9/2/easy-rag-for-typescript-and-react-apps): Build a RAG system in TypeScript and React by processing text documents, generating embeddings, and utilizing a vector database for semantic search to answer user queries.
+- 👀 [TanStack Query PR - Add support for `React.use()`](https://github.com/TanStack/query/pull/7988) : React Query prévoit de renvoyer une promesse que vous pouvez `use()`, ce qui facilite l'intégration avec Suspense d'une manière performante. C'est plus pratique que `usePrefetchQuery` et cela facilite mieux la parallélisation que `useSuspenseQuery`.
+- 👀 [Remix Route Convention Evolution](https://github.com/brookslybrand/route-convention-evolution) : Le nouveau `routes.ts` que nous avons évoqué la semaine dernière vous permettra d'ignorer le routage basé sur le système de fichiers, ou de simplifier en utilisant la convention de votre choix.
+- 🐦 [Next.js 15 may be released soon](https://x.com/feedthejim/status/1829569083777437745) sans attendre que React 19 soit stable, et sans nécessiter React 19 pour le routeur de pages. Elle inclura des améliorations majeures de Turbopack.
+- 🐦 [Render on Fetch vs Fetch on Render](https://x.com/t3dotgg/status/1829988532489793957) : Theo partage une visualisation graphique des différents modèles de rendu React. Une vidéo associée est disponible pour approfondir.
+- 📜 [Introducing @svg-use](https://fotis.xyz/posts/introducing-svg-use/) : Explique en détail comment SVG-in-JS (notamment SVGR dans React) est pratique pour le thématisation et la distribution, mais n'est pas idéal en termes de performance et de duplication. Le pattern `<use href>` est une bonne alternative mais nécessite une plomberie manuelle, l'auteur a donc créé une chaîne d'outils pour l'automatiser.
+- 📜 [Build-time Components](https://codehike.org/blog/build-time-components) : Un article très illustré explique les avantages des React Server Components pour les utilisateurs de MDX qui souhaitent rendre leur contenu interactif. Les composants clients et les plugins Remark/Rehype ont des limites, et les RSC offrent le meilleur des deux.
+- 📜 [Using Server Functions and TanStack Query](https://www.brenelz.com/posts/using-server-functions-and-tanstack-query/) : TanStack Start est presque prêt à l'emploi, et a une approche convaincante de la collecte de données, avec des « server fns » intégrés avec react-query et le routage (pour le prefetching), entièrement typesafe bien sûr.
+- 📜 [What the heck is atomic state management?](https://www.frontendundefined.com/posts/monthly/jotai-atomic-state-management/) : Un rappel sur la façon d'utiliser Jotai « de la bonne manière » et les avantages qu'il apporte.
+- 📜 [Component testing in Storybook](https://storybook.js.org/blog/component-testing/) : Storybook promeut les tests de composants comme un complément aux tests de bout en bout, offrant rapidité et fiabilité avec une reproduction fidèle du navigateur pour une meilleure couverture des tests de l'interface utilisateur.
+- 📜 [The Complete Developer Guide to React 19:](https://www.callstack.com/blog/the-complete-developer-guide-to-react-19-part-1-async-handling) Une série en 2 parties sur les nouveautés de React 19, y compris useTransition, useActionState, useOptimistic, use, Server Components, Server Actions, ref comme une prop, diffs pour les erreurs d'hydratation, rapports d'erreurs améliorés, Context comme un provider, useDeferredValue valeur initiale et plus encore.
+- 📜 [Easy RAG for TypeScript and React Apps](https://edspencer.net/2024/9/2/easy-rag-for-typescript-and-react-apps) : Construire un système RAG en TypeScript et React en traitant des documents de texte, en générant des embeddings et en utilisant une base de données vectorielle pour la recherche sémantique afin de répondre aux requêtes des utilisateurs.
 - 📜 [Blending Markdown and React components in NextJS](https://edspencer.net/2024/8/28/using-markdown-with-nextjs)
 - 📜 [Higher Order Components (HOCs) in React: What They Are and How To Use Them](https://www.reactsquad.io/blog/higher-order-components-hocs-in-react)
 - 📜 [Comprehensive React Testing: Handling API Calls with Mock Service Worker](https://www.trevorlasn.com/blog/react-testing-mock-service-worker/)
@@ -93,22 +93,22 @@ Blacksmith runs your GitHub Actions substantially faster by running them on mode
 
 [![React Universe](/emails/issues/199/react-universe.jpg)](https://www.reactuniverseconf.com/)
 
-At the time we’re writing this, the React Native Core Contributor Summit is happening in Wrocław.
+À l'heure où nous écrivons ces lignes, le React Native Core Contributor Summit se déroule à Wrocław.
 
-It will be followed by the React Universe conf on Thursday and Friday. A lot of exciting talks are planned, and [you can follow along on Youtube](https://www.youtube.com/watch?v=b48Lax2-jOQ). Some highlights: A new debugger, The New Architecture, Expo DOM Components, Static Hermes.
+Il sera suivi par la React Universe conf jeudi et vendredi. De nombreuses conférences passionnantes sont prévues et [vous pouvez les suivre sur Youtube](https://www.youtube.com/watch?v=b48Lax2-jOQ). Quelques points forts : Un nouveau débogueur, la New Architecture, Expo DOM Components, Static Hermes.
 
-So we will probably have more React Native news for you next week!
+Nous aurons donc probablement d'autres nouvelles de React Native pour vous la semaine prochaine !
 
 ---
 
 - 💸 [React Native Mastery - The only course you need to Master React Native & Expo](https://notjust.dev/react-native-mastery?utm_source=twir&utm_medium=email)
-- 👀 [Re.Pack is adding support for Rspack](https://github.com/callstack/repack/pull/720): The alternative, webpack-compatible bundler for React Native will probably see major speed gains with this change.
+- 👀 [Re.Pack is adding support for Rspack](https://github.com/callstack/repack/pull/720) : Le bundler alternatif compatible avec webpack pour React Native verra probablement des gains de vitesse importants avec ce changement.
 - 🐦 [React Native IDE will integrate Storybook into IDE's preview mode](https://x.com/kzzzf/status/1829262449541062716)
-- 🐦 [React Three Fiber running on react-native-webgpu](https://x.com/aarongrider/status/1830629528005460016): We’ve seen examples of Three.js running with react-native-webgpu. Aaron Grider from SpaceX is currently working on React Three Fiber support, bringing its declarative API to React Native land.
+- 🐦 [React Three Fiber running on react-native-webgpu](https://x.com/aarongrider/status/1830629528005460016) : Nous avons vu des exemples de Three.js fonctionnant avec react-native-webgpu. Aaron Grider de SpaceX travaille actuellement sur le support de React Three Fiber, apportant son API déclarative à React Native.
 - 📜 [Create and run fast end-to-end tests using Moropo and Expo: with Maestro](https://expo.dev/blog/create-and-run-fast-end-to-end-tests-using-moropo-and-expo)
-- 📜 [How to Develop a Super App with React Native?](https://medium.com/@xayilmaz/how-to-develop-a-super-app-with-react-native-fe18fbe002c5): Use of a custom native module for communication between mini-apps differs from the Repack approach, which leverages Webpack to generate modular and independent JavaScript bundles for each mini-app.
-- 📖 [Expo documentation update](https://x.com/amanhimself/status/1828545129499750498): Local First Architecture, DOM Components, Native project upgrade helper for SDK 51.
-- 📖 [Expo Application Services (EAS) Pricing](https://expo.dev/pricing#update): EAS Update and Build concurrencies get cheaper as of September 1st.
+- 📜 [How to Develop a Super App with React Native?](https://medium.com/@xayilmaz/how-to-develop-a-super-app-with-react-native-fe18fbe002c5) : L'utilisation d'un module natif personnalisé pour la communication entre les mini-applications diffère de l'approche Repack, qui s'appuie sur Webpack pour générer des bundles JavaScript modulaires et indépendants pour chaque mini-application.
+- 📖 [Expo documentation update](https://x.com/amanhimself/status/1828545129499750498) : Architecture locale first, composants DOM, aide à la mise à jour des projets natifs pour le SDK 51.
+- 📖 [Expo Application Services (EAS) Pricing](https://expo.dev/pricing#update): Les tarifs de l'EAS pour la mise à jour et le build seront moins élevés à partir du 1er septembre.
 - 📦 [react-native-macos 0.75](https://www.npmjs.com/package/react-native-macos/v/0.75.2)
 - 🎥 [Minute React Native - React Native WebGPU Explained in under 2 Minutes](https://www.youtube.com/watch?v=DQrO2LFnrOw)
 - 🎥 [Dan’s Lab - How to build a QR Code Scanner with Expo](https://www.youtube.com/watch?v=PZIEqcdFjpQ)
@@ -132,7 +132,7 @@ So we will probably have more React Native news for you next week!
 - 📦 [ThreeJS 168](https://github.com/mrdoob/three.js/releases/tag/r168)
 - 📦 [Style-observer \- A MutationObserver for CSS](https://www.bram.us/2024/08/31/introducing-bramus-style-observer-a-mutationobserver-for-css/)
 - 📦 [Effect 3.7 \- With HttpApi, a declarative way to define api endpoints](https://effect.website/blog/effect-3.7)
-- 📦 [Node 22.8](https://nodejs.org/en/blog/release/v22.8.0) \- module.enableCompileCache(), vm.createContext() with freezable globalThis, coverage thresholds
+- 📦 [Node 22.8](https://nodejs.org/en/blog/release/v22.8.0) \- module.enableCompileCache(), vm.createContext() avec globalThis gelable et seuils de couverture
 - 📦 [Sherif 1.0 \- Opinionated, zero-config linter for JavaScript monorepos](https://github.com/QuiiBz/sherif)
 - 📦 [Safari Technology Preview 202 \- Lots of CSS features](https://webkit.org/blog/15798/release-notes-for-safari-technology-preview-202/)
 - 📦 [i-html \- inline-html import element](https://www.keithcirkel.co.uk/i-html/)
